test: 주소 서비스 단위 테스트 리팩터링 및 시나리오 명확화
- AddressServiceTest의 테스트 메서드명을 도메인/시나리오 기반으로 개선
- ArgumentCaptor 활용 등 검증 방식 개선
- 사용자 미존재/주소 미존재 등 예외 및 엣지케이스 테스트 추가
- DisplayName을 요구사항 기반 코드(예: SAVE-SUCCESS-001 등)로 통일
- 불필요한 중복 코드 제거 및 가독성 향상

Refs: #45, #47